--- a/src/Components/HeroSubtitle/hero-subtitle.css
+++ b/src/Components/HeroSubtitle/hero-subtitle.css
@@ -1,3 +1,17 @@
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0.25;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 p {
   font-family: Proza Libre;
   font-style: normal;
@@ -6,4 +20,6 @@ p {
   line-height: 32px;
   color: #080707;
   padding-bottom: 16px;
+
+  animation: fadeIn 1s ease-in-out;
 }
