--- a/src/Components/TextButton/text-button.scss
+++ b/src/Components/TextButton/text-button.scss
@@ -12,7 +12,7 @@ $animate: all 1s ease-in-out;
   font-size: 16px;
   line-height: 24px;
   padding-bottom: 0;
-  color: #211114;
+  color: #8e2800;
   position: relative;
   transition: $animate;
 
@@ -34,18 +34,16 @@ $animate: all 1s ease-in-out;
   0% {
     opacity: 0;
   }
-  25% {
-    opacity: 0;
-  }
   100% {
     opacity: 1;
   }
 }
 
-svg {
+svg.cta-arrow {
+  color: #8e2800;
   padding-left: 8px;
+  animation: fadeIn 0.5s ease-out;
   transition: transform 0.3s ease-out;
-  animation: fadeIn 0.4s ease-in-out;
 }
 
 .text-button:hover {
