--- a/src/Components/TextilesArea/textiles-area.css
+++ b/src/Components/TextilesArea/textiles-area.css
@@ -1,3 +1,7 @@
 .textiles-area {
-  padding: 120px 0 100px 130px;
+  padding-top: 120px;
+  padding-bottom: 100px;
+  padding-left: 130px;
+  height: 100vh;
+  /* my laptop screen is small, so I still have to scroll in this */
 }
