--- a/src/Components/ProductsReel/products-reel.css
+++ b/src/Components/ProductsReel/products-reel.css
@@ -1,3 +1,50 @@
-.reel-wrapper {
-  display: flex;
+/* .products-reel {
+  padding-bottom: 100px;
+} */
+
+.scroll-menu-arrow {
+  padding: 20px;
+  cursor: pointer;
+}
+
+.menu-item {
+  position: relative;
+  width: 380px;
+  height: 500px;
+  margin-right: 20px;
+  user-select: none;
+  cursor: pointer;
+  border: none;
+}
+
+img {
+  position: relative;
+  border-radius: 4px;
+  z-index: 0;
+}
+
+.product-name {
+  position: absolute;
+  top: 6%;
+  left: 7.89%;
+  z-index: 1;
+  font-family: Cormorant;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 48px;
+  color: #080707;
+}
+
+.product-price {
+  position: absolute;
+  right: 7.89%;
+  bottom: 6%;
+  font-family: Cormorant;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 40px;
+  text-align: right;
+  color: #080707;
 }
