--- a/src/Components/ProductsReel/products-reel.css
+++ b/src/Components/ProductsReel/products-reel.css
@@ -1,8 +1,13 @@
-/* .products-reel {
+.products-reel {
   padding-bottom: 100px;
-} */
+}
+
+.menu-wrapper {
+  overflow: scroll;
+}
 
 .scroll-menu-arrow {
+  font-size: 20px;
   padding: 20px;
   cursor: pointer;
 }
@@ -21,6 +26,12 @@ img {
   position: relative;
   border-radius: 4px;
   z-index: 0;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  pointer-events: none;
 }
 
 .product-name {
