--- a/src/Components/TextilesArea/textiles-area.css
+++ b/src/Components/TextilesArea/textiles-area.css
@@ -1,5 +1,6 @@
 .textiles-area {
-  padding-left: 130px;
+  padding-left: 90px;
+  padding-bottom: 100px;
   height: 100vh;
   /* my laptop screen is small, so I still have to scroll in this */
 }
